windows-instance.tf
resource "aws_key_pair" "hclmsiwin" {
  key_name   = "hclmsiwin"
  public_key = file(var.PATH_TO_PUBLIC_KEY)
}

resource "aws_instance" "win-ec2-terraform" {
  ami           = "ami-034a4d85b5ef5e779"
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.main-public-1.id
  key_name      = aws_key_pair.hclmsiwin.key_name
  vpc_security_group_ids  = ["${aws_security_group.allow-all.id}"]
  user_data     = <<EOF
<powershell>
net user ${var.INSTANCE_USERNAME} '${var.INSTANCE_PASSWORD}' /add /y
net localgroup administrators ${var.INSTANCE_USERNAME} /add

winrm quickconfig -q
winrm set winrm/config/winrs '@{MaxMemoryPerShellMB="300"}'
winrm set winrm/config '@{MaxTimeoutms="1800000"}'
winrm set winrm/config/service '@{AllowUnencrypted="true"}'
winrm set winrm/config/service/auth '@{Basic="true"}'

netsh advfirewall firewall add rule name="WinRM 5985" protocol=TCP dir=in localport=5985 action=allow
netsh advfirewall firewall add rule name="WinRM 5986" protocol=TCP dir=in localport=5986 action=allow

net stop winrm
sc.exe config winrm start=auto
net start winrm
</powershell>
EOF


  provisioner "file" {
    source = "test.txt"
    destination = "C:/test.txt"
  }
  connection {
    host = coalesce(self.public_ip, self.private_ip)
    type = "winrm"
    timeout = "10m"
    user = var.INSTANCE_USERNAME
    password = var.INSTANCE_PASSWORD
  }
  tags = {
    Name = "Windows_Terraform"
  }
 
}
 
output "win_ip" {
 
value="${aws_instance.win-ec2-terraform.public_ip}"
}
